# ojo-critico-news

./: .gitignore  README.md  docker-compose.yaml  env.example
news-api/: .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.txt
news-api/app/: config.py  database.py  models.py
news-debate-synth/: Dockerfile  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  __init__.py  __main__.py  env.example  main.py  pyproject.toml  test_imports.py
news-debate-synth/agents/: __init__.py  base_agent.py  debate_agents.py
news-debate-synth/config/: __init__.py  logging.py  settings.py
news-debate-synth/database/: __init__.py  db_client.py  models.py
news-debate-synth/examples/: advanced_usage.py  basic_usage.py
news-debate-synth/orchestration/: __init__.py  analysis_parser.py  debate_orchestrator.py  termination.py
news-debate-synth/tests/: __init__.py  test_analysis_parser.py  test_orchestrator.py
news-website/: Dockerfile  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
news-website/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
news-website/components/: article-card.tsx  article-list.tsx  site-header.tsx  synthesis-panel.tsx
news-website/lib/: api.ts  format.ts
news-website/types/: index.ts
news_collector/: Dockerfile  README_TESTS.md  SPIDER_README.md  main.py  pipelines.py  requirements-dev.txt  requirements.txt  run_spider.py  start.sh
news_collector/outputs/: listin_diario_articles.json
news_collector/spiders/: el_nacional.py  items.py  listin_diario.py
(+8 files in other folders)
