[project]
name = "news-debate-synth"
version = "0.1.0"
description = "AI-powered news debate synthesis service using AG2 (AutoGen 2.0) with OpenAI GPT-4 Mini"
requires-python = ">=3.9, <3.14"
dependencies = [
    "ag2>=0.9.9",
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
    "pymongo>=4.6.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
